builds/tests/345/data/attachments/fdaf84d446434fd8.txt
2026-06-18 10:28:39,566 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-18 10:28:39,566 INFO     yoyo.migrations —  - applying step 0
2026-06-18 10:28:39,566 INFO     yoyo.migrations —  - applying step 1
2026-06-18 10:28:39,566 INFO     yoyo.migrations —  - applying step 2
2026-06-18 10:28:39,567 INFO     yoyo.migrations —  - applying step 3
2026-06-18 10:28:39,567 INFO     yoyo.migrations —  - applying step 4
2026-06-18 10:28:39,567 INFO     yoyo.migrations —  - applying step 5
2026-06-18 10:28:39,567 INFO     yoyo.migrations —  - applying step 6
2026-06-18 10:28:39,567 INFO     yoyo.migrations —  - applying step 7
2026-06-18 10:28:39,568 INFO     yoyo.migrations —  - applying step 8
2026-06-18 10:28:39,568 INFO     yoyo.migrations —  - applying step 9
2026-06-18 10:28:39,568 INFO     yoyo.migrations —  - applying step 10
2026-06-18 10:28:39,568 INFO     yoyo.migrations —  - applying step 11
2026-06-18 10:28:39,568 INFO     yoyo.migrations —  - applying step 12
2026-06-18 10:28:39,569 INFO     yoyo.migrations —  - applying step 13
2026-06-18 10:28:39,569 INFO     yoyo.migrations —  - applying step 14
2026-06-18 10:28:39,571 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-18 10:28:39,571 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-18 10:28:39,572 INFO     yoyo.migrations —  - applying step 0
2026-06-18 10:28:39,572 INFO     yoyo.migrations —  - applying step 1
2026-06-18 10:28:39,573 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-18 10:28:39,574 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-18 10:28:39,575 INFO     yoyo.migrations —  - applying step 0
2026-06-18 10:28:39,576 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-18 10:28:39,577 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-18 10:28:39,577 INFO     yoyo.migrations —  - applying step 0
2026-06-18 10:28:39,577 INFO     yoyo.migrations —  - applying step 1
2026-06-18 10:28:39,577 INFO     yoyo.migrations —  - applying step 2
2026-06-18 10:28:39,578 INFO     yoyo.migrations —  - applying step 3
2026-06-18 10:28:39,578 INFO     yoyo.migrations —  - applying step 4
2026-06-18 10:28:39,578 INFO     yoyo.migrations —  - applying step 5
2026-06-18 10:28:39,578 INFO     yoyo.migrations —  - applying step 6
2026-06-18 10:28:39,579 INFO     yoyo.migrations —  - applying step 7
2026-06-18 10:28:39,579 INFO     yoyo.migrations —  - applying step 8
2026-06-18 10:28:39,579 INFO     yoyo.migrations —  - applying step 9
2026-06-18 10:28:39,580 INFO     yoyo.migrations —  - applying step 10
2026-06-18 10:28:39,580 INFO     yoyo.migrations —  - applying step 11
2026-06-18 10:28:39,580 INFO     yoyo.migrations —  - applying step 12
2026-06-18 10:28:39,580 INFO     yoyo.migrations —  - applying step 13
2026-06-18 10:28:39,581 INFO     yoyo.migrations —  - applying step 14
2026-06-18 10:28:39,581 INFO     yoyo.migrations —  - applying step 15
2026-06-18 10:28:39,581 INFO     yoyo.migrations —  - applying step 16
2026-06-18 10:28:39,582 INFO     yoyo.migrations —  - applying step 17
2026-06-18 10:28:39,582 INFO     yoyo.migrations —  - applying step 18
2026-06-18 10:28:39,582 INFO     yoyo.migrations —  - applying step 19
2026-06-18 10:28:39,583 INFO     yoyo.migrations —  - applying step 20
2026-06-18 10:28:39,583 INFO     yoyo.migrations —  - applying step 21
2026-06-18 10:28:39,583 INFO     yoyo.migrations —  - applying step 22
2026-06-18 10:28:39,585 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-18 10:28:39,586 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-18 10:28:39,586 INFO     yoyo.migrations —  - applying step 0
2026-06-18 10:28:39,586 INFO     yoyo.migrations —  - applying step 1
2026-06-18 10:28:39,586 INFO     yoyo.migrations —  - applying step 2
2026-06-18 10:28:39,587 INFO     yoyo.migrations —  - applying step 3
2026-06-18 10:28:39,588 INFO     yoyo.migrations —  - applying step 4
2026-06-18 10:28:39,588 INFO     yoyo.migrations —  - applying step 5
2026-06-18 10:28:39,588 INFO     yoyo.migrations —  - applying step 6
2026-06-18 10:28:39,588 INFO     yoyo.migrations —  - applying step 7
2026-06-18 10:28:39,589 INFO     yoyo.migrations —  - applying step 8
2026-06-18 10:28:39,589 INFO     yoyo.migrations —  - applying step 9
2026-06-18 10:28:39,589 INFO     yoyo.migrations —  - applying step 10
2026-06-18 10:28:39,589 INFO     yoyo.migrations —  - applying step 11
2026-06-18 10:28:39,589 INFO     yoyo.migrations —  - applying step 12
2026-06-18 10:28:39,589 INFO     yoyo.migrations —  - applying step 13
2026-06-18 10:28:39,590 INFO     yoyo.migrations —  - applying step 14
2026-06-18 10:28:39,590 INFO     yoyo.migrations —  - applying step 15
2026-06-18 10:28:39,590 INFO     yoyo.migrations —  - applying step 16
2026-06-18 10:28:39,590 INFO     yoyo.migrations —  - applying step 17
2026-06-18 10:28:39,590 INFO     yoyo.migrations —  - applying step 18
2026-06-18 10:28:39,591 INFO     yoyo.migrations —  - applying step 19
2026-06-18 10:28:39,591 INFO     yoyo.migrations —  - applying step 20
2026-06-18 10:28:39,591 INFO     yoyo.migrations —  - applying step 21
2026-06-18 10:28:39,591 INFO     yoyo.migrations —  - applying step 22
2026-06-18 10:28:39,591 INFO     yoyo.migrations —  - applying step 23
2026-06-18 10:28:39,591 INFO     yoyo.migrations —  - applying step 24
2026-06-18 10:28:39,592 INFO     yoyo.migrations —  - applying step 25
2026-06-18 10:28:39,592 INFO     yoyo.migrations —  - applying step 26
2026-06-18 10:28:39,592 INFO     yoyo.migrations —  - applying step 27
2026-06-18 10:28:39,592 INFO     yoyo.migrations —  - applying step 28
2026-06-18 10:28:39,592 INFO     yoyo.migrations —  - applying step 29
2026-06-18 10:28:39,593 INFO     yoyo.migrations —  - applying step 30
2026-06-18 10:28:39,593 INFO     yoyo.migrations —  - applying step 31
2026-06-18 10:28:39,593 INFO     yoyo.migrations —  - applying step 32
2026-06-18 10:28:39,593 INFO     yoyo.migrations —  - applying step 33
2026-06-18 10:28:39,594 INFO     yoyo.migrations —  - applying step 34
2026-06-18 10:28:39,596 INFO     yoyo.migrations —  - applying step 35
2026-06-18 10:28:39,596 INFO     yoyo.migrations —  - applying step 36
2026-06-18 10:28:39,596 INFO     yoyo.migrations —  - applying step 37
2026-06-18 10:28:39,597 INFO     yoyo.migrations —  - applying step 38
2026-06-18 10:28:39,598 INFO     yoyo.migrations —  - applying step 39
2026-06-18 10:28:39,599 INFO     yoyo.migrations —  - applying step 40
2026-06-18 10:28:39,601 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-18 10:28:39,602 INFO     yoyo.migrations — Applying 0006_category_templates
2026-06-18 10:28:39,603 INFO     yoyo.migrations —  - applying step 0
2026-06-18 10:28:39,606 INFO     yoyo.migrations — Marking 0006_category_templates applied
2026-06-18 10:28:39,613 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-18 10:28:39,614 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 540, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
